fixed right-aligned spinners and adjusted button width

--- a/app/styles/_icons.scss
+++ b/app/styles/_icons.scss
@@ -1,3 +1,8 @@
+.tests {
+  float: right;
+  margin-right: 17px;
+}
+
 @-webkit-keyframes spin2 {
     from { -webkit-transform: rotate(0deg);}
     to { -webkit-transform: rotate(360deg);}
